feat: add reason field to registration, implement RBAC for admin management, and introduce EMAIL_PENDING status