@@ -1,15 +1,18 @@
 package cm.mvtech.drivehub.platform.admin.services.serviceImpl;
 
+import cm.mvtech.drivehub.modules.auth.application.dto.ForgotPasswordRequest;
+import cm.mvtech.drivehub.modules.auth.application.dto.ResetPasswordRequest;
+import cm.mvtech.drivehub.modules.auth.domain.services.EmailService;
 import cm.mvtech.drivehub.modules.auth.domain.services.JwtService;
 import cm.mvtech.drivehub.platform.admin.enums.AdminRole;
 import cm.mvtech.drivehub.platform.admin.enums.AdminStatus;
-
+import cm.mvtech.drivehub.platform.admin.models.AdminEmailVerificationToken;
+import cm.mvtech.drivehub.platform.admin.models.AdminPasswordResetToken;
 import cm.mvtech.drivehub.platform.admin.models.PlatformAdmin;
-import cm.mvtech.drivehub.platform.admin.models.dto.PlatformAdminAuthResponse;
-import cm.mvtech.drivehub.platform.admin.models.dto.PlatformAdminCreateRequest;
-import cm.mvtech.drivehub.platform.admin.models.dto.PlatformAdminLoginRequest;
-import cm.mvtech.drivehub.platform.admin.models.dto.PlatformAdminResponse;
+import cm.mvtech.drivehub.platform.admin.models.dto.*;
 import cm.mvtech.drivehub.platform.admin.models.mappers.PlatformAdminMapper;
+import cm.mvtech.drivehub.platform.admin.repositories.AdminEmailVerificationTokenRepository;
+import cm.mvtech.drivehub.platform.admin.repositories.AdminPasswordResetTokenRepository;
 import cm.mvtech.drivehub.platform.admin.repositories.PlatformAdminRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -21,9 +24,9 @@ import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -41,6 +44,9 @@ class PlatformAdminServiceTest {
     @Mock private PasswordEncoder passwordEncoder;
     @Mock private PlatformAdminMapper adminMapper;
     @Mock private Authentication authentication;
+    @Mock private EmailService emailService;
+    @Mock private AdminEmailVerificationTokenRepository adminEmailTokenRepository;
+    @Mock private AdminPasswordResetTokenRepository adminPasswordResetRepository;
 
     @InjectMocks
     private PlatformAdminService platformAdminService;
@@ -50,6 +56,9 @@ class PlatformAdminServiceTest {
 
     @BeforeEach
     void setUp() {
+        ReflectionTestUtils.setField(
+                platformAdminService, "frontendUrl", "http://localhost:4200");
+
         platformAdmin = new PlatformAdmin();
         platformAdmin.setId(UUID.randomUUID());
         platformAdmin.setName("Platform Admin");
@@ -57,15 +66,19 @@ class PlatformAdminServiceTest {
         platformAdmin.setPassword("encodedPassword");
         platformAdmin.setRole(AdminRole.REVIEWER);
         platformAdmin.setAdminStatus(AdminStatus.ACTIVE);
+        platformAdmin.setResidence("Yaoundé");
+        platformAdmin.setPhoneNumber("677000000");
+        platformAdmin.setReason("Je souhaite rejoindre l'équipe DriveHub");
 
-        // ← Helper partagé — tous les tests utilisent ceci
         platformAdminResponse = new PlatformAdminResponse(
                 platformAdmin.getId(),
                 platformAdmin.getName(),
                 platformAdmin.getEmail(),
                 platformAdmin.getRole(),
                 platformAdmin.getAdminStatus(),
-                LocalDateTime.now()   // ← champ manquant ajouté
+                platformAdmin.getResidence(),
+                platformAdmin.getPhoneNumber(),
+                LocalDateTime.now()
         );
     }
 
@@ -73,16 +86,14 @@ class PlatformAdminServiceTest {
 
     @Test
     void adminerLogin_Success() {
-        PlatformAdminLoginRequest loginRequest =
-                new PlatformAdminLoginRequest("admin@platform.com", "password");
         when(adminRepository.findByEmail(anyString()))
                 .thenReturn(Optional.of(platformAdmin));
         when(passwordEncoder.matches(anyString(), anyString())).thenReturn(true);
         when(jwtService.generatePlatformAdminToken(any(PlatformAdmin.class)))
                 .thenReturn("adminToken");
 
-        PlatformAdminAuthResponse response =
-                platformAdminService.adminerLogin(loginRequest);
+        PlatformAdminAuthResponse response = platformAdminService.adminerLogin(
+                new PlatformAdminLoginRequest("admin@platform.com", "password"));
 
         assertNotNull(response);
         assertEquals("adminToken", response.token());
@@ -95,44 +106,66 @@ class PlatformAdminServiceTest {
 
     @Test
     void adminerLogin_UserNotFound() {
-        PlatformAdminLoginRequest loginRequest =
-                new PlatformAdminLoginRequest("nonexistent@platform.com", "password");
         when(adminRepository.findByEmail(anyString())).thenReturn(Optional.empty());
 
         assertThrows(UsernameNotFoundException.class,
-                () -> platformAdminService.adminerLogin(loginRequest));
-        verify(adminRepository).findByEmail(anyString());
+                () -> platformAdminService.adminerLogin(
+                        new PlatformAdminLoginRequest("none@test.cm", "pass")));
         verifyNoInteractions(passwordEncoder, jwtService);
     }
 
     @Test
     void adminerLogin_InvalidPassword() {
-        PlatformAdminLoginRequest loginRequest =
-                new PlatformAdminLoginRequest("admin@platform.com", "wrongPassword");
         when(adminRepository.findByEmail(anyString()))
                 .thenReturn(Optional.of(platformAdmin));
         when(passwordEncoder.matches(anyString(), anyString())).thenReturn(false);
 
         assertThrows(AccessDeniedException.class,
-                () -> platformAdminService.adminerLogin(loginRequest));
-        verify(adminRepository).findByEmail(anyString());
-        verify(passwordEncoder).matches(anyString(), anyString());
+                () -> platformAdminService.adminerLogin(
+                        new PlatformAdminLoginRequest("admin@platform.com", "wrong")));
         verifyNoInteractions(jwtService);
     }
 
     @Test
-    void adminerLogin_AccountNotActive() {
+    void adminerLogin_EmailPending_ShouldBlock() {
+        platformAdmin.setAdminStatus(AdminStatus.EMAIL_PENDING);
+        when(adminRepository.findByEmail(anyString()))
+                .thenReturn(Optional.of(platformAdmin));
+        when(passwordEncoder.matches(anyString(), anyString())).thenReturn(true);
+
+        AccessDeniedException ex = assertThrows(AccessDeniedException.class,
+                () -> platformAdminService.adminerLogin(
+                        new PlatformAdminLoginRequest("admin@platform.com", "pass")));
+
+        assertTrue(ex.getMessage().contains("email"));
+        verifyNoInteractions(jwtService);
+    }
+
+    @Test
+    void adminerLogin_PendingAccount_ShouldBlock() {
         platformAdmin.setAdminStatus(AdminStatus.PENDING);
-        PlatformAdminLoginRequest loginRequest =
-                new PlatformAdminLoginRequest("admin@platform.com", "password");
+        when(adminRepository.findByEmail(anyString()))
+                .thenReturn(Optional.of(platformAdmin));
+        when(passwordEncoder.matches(anyString(), anyString())).thenReturn(true);
+
+        AccessDeniedException ex = assertThrows(AccessDeniedException.class,
+                () -> platformAdminService.adminerLogin(
+                        new PlatformAdminLoginRequest("admin@platform.com", "pass")));
+
+        assertTrue(ex.getMessage().contains("ROOT"));
+        verifyNoInteractions(jwtService);
+    }
+
+    @Test
+    void adminerLogin_SuspendedAccount_ShouldBlock() {
+        platformAdmin.setAdminStatus(AdminStatus.SUSPENDED);
         when(adminRepository.findByEmail(anyString()))
                 .thenReturn(Optional.of(platformAdmin));
         when(passwordEncoder.matches(anyString(), anyString())).thenReturn(true);
 
         assertThrows(AccessDeniedException.class,
-                () -> platformAdminService.adminerLogin(loginRequest));
-        verify(adminRepository).findByEmail(anyString());
-        verify(passwordEncoder).matches(anyString(), anyString());
+                () -> platformAdminService.adminerLogin(
+                        new PlatformAdminLoginRequest("admin@platform.com", "pass")));
         verifyNoInteractions(jwtService);
     }
 
@@ -140,45 +173,50 @@ class PlatformAdminServiceTest {
 
     @Test
     void adminerRegistry_Success() {
-        PlatformAdminCreateRequest createRequest = new PlatformAdminCreateRequest(
-                "New Admin", "new@platform.com",
-                AdminRole.REVIEWER, "password", "Residence", "123456789"
+        PlatformAdminCreateRequest request = new PlatformAdminCreateRequest(
+                "New Admin", "new@platform.com", AdminRole.REVIEWER,
+                "password", "Yaoundé", "677000000",
+                "Je veux contribuer à DriveHub"
         );
         when(adminRepository.findByEmail(anyString())).thenReturn(Optional.empty());
         when(passwordEncoder.encode(anyString())).thenReturn("encodedPassword");
         when(adminRepository.save(any(PlatformAdmin.class))).thenReturn(platformAdmin);
+        when(adminEmailTokenRepository.save(any())).thenReturn(new AdminEmailVerificationToken());
+        doNothing().when(emailService).sendAdminEmailVerification(
+                anyString(), anyString(), anyString(), anyString(), anyString());
 
-        platformAdminService.adminerRegistry(createRequest);
+        platformAdminService.adminerRegistry(request);
 
         verify(adminRepository).findByEmail(anyString());
         verify(passwordEncoder).encode(anyString());
         verify(adminRepository).save(any(PlatformAdmin.class));
+        verify(emailService).sendAdminEmailVerification(
+                anyString(), anyString(), anyString(), anyString(), anyString());
     }
 
     @Test
     void adminerRegistry_CannotCreateRoot() {
-        PlatformAdminCreateRequest createRequest = new PlatformAdminCreateRequest(
-                "New Root", "root@platform.com",
-                AdminRole.ROOT, "password", "Residence", "123456789"
+        PlatformAdminCreateRequest request = new PlatformAdminCreateRequest(
+                "Root", "root@platform.com", AdminRole.ROOT,
+                "password", "Yaoundé", "677000000", "motif"
         );
 
         assertThrows(IllegalArgumentException.class,
-                () -> platformAdminService.adminerRegistry(createRequest));
+                () -> platformAdminService.adminerRegistry(request));
         verifyNoInteractions(adminRepository, passwordEncoder);
     }
 
     @Test
     void adminerRegistry_EmailAlreadyUsed() {
-        PlatformAdminCreateRequest createRequest = new PlatformAdminCreateRequest(
-                "Existing Admin", "admin@platform.com",
-                AdminRole.SUPER_ADMIN, "password", "Residence", "123456789"
+        PlatformAdminCreateRequest request = new PlatformAdminCreateRequest(
+                "Existing", "admin@platform.com", AdminRole.SUPER_ADMIN,
+                "password", "Yaoundé", "677000000", "motif"
         );
         when(adminRepository.findByEmail(anyString()))
                 .thenReturn(Optional.of(platformAdmin));
 
         assertThrows(IllegalArgumentException.class,
-                () -> platformAdminService.adminerRegistry(createRequest));
-        verify(adminRepository).findByEmail(anyString());
+                () -> platformAdminService.adminerRegistry(request));
         verify(adminRepository, never()).save(any(PlatformAdmin.class));
     }
 
@@ -189,18 +227,13 @@ class PlatformAdminServiceTest {
         PlatformAdmin pendingAdmin = new PlatformAdmin();
         pendingAdmin.setAdminStatus(AdminStatus.PENDING);
 
-        // ← PlatformAdminResponse avec 6 champs dont createdAt
         PlatformAdminResponse pendingResponse = new PlatformAdminResponse(
-                UUID.randomUUID(),
-                "Pending Admin",
-                "pending@platform.com",
-                AdminRole.SUPER_ADMIN,
-                AdminStatus.PENDING,
-                LocalDateTime.now()   // ← champ manquant ajouté
+                UUID.randomUUID(), "Pending", "pending@platform.com",
+                AdminRole.SUPER_ADMIN, AdminStatus.PENDING, "SYSTEM", "40404",LocalDateTime.now()
         );
 
         when(adminRepository.findByAdminStatus(AdminStatus.PENDING))
-                .thenReturn(Arrays.asList(pendingAdmin));
+                .thenReturn(List.of(pendingAdmin));
         when(adminMapper.toResponse(any(PlatformAdmin.class)))
                 .thenReturn(pendingResponse);
 
@@ -208,11 +241,8 @@ class PlatformAdminServiceTest {
                 platformAdminService.pendingAdminerRequest();
 
         assertNotNull(result);
-        assertFalse(result.isEmpty());
         assertEquals(1, result.size());
         assertEquals(AdminStatus.PENDING, result.get(0).adminStatus());
-        verify(adminRepository).findByAdminStatus(AdminStatus.PENDING);
-        verify(adminMapper).toResponse(any(PlatformAdmin.class));
     }
 
     @Test
@@ -220,23 +250,7 @@ class PlatformAdminServiceTest {
         when(adminRepository.findByAdminStatus(AdminStatus.PENDING))
                 .thenReturn(List.of());
 
-        List<PlatformAdminResponse> result =
-                platformAdminService.pendingAdminerRequest();
-
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-        verify(adminRepository).findByAdminStatus(AdminStatus.PENDING);
-    }
-
-    // ─── GET CURRENT ADMIN ────────────────────────────────────────────────────
-
-    @Test
-    void getCurrentAdmin_NotAuthenticated() {
-        when(authentication.isAuthenticated()).thenReturn(false);
-
-        assertThrows(AccessDeniedException.class,
-                () -> platformAdminService.getCurrentAdmin(authentication));
-        verify(authentication).isAuthenticated();
+        assertTrue(platformAdminService.pendingAdminerRequest().isEmpty());
     }
 
     // ─── ACTIVATE ADMIN ───────────────────────────────────────────────────────
@@ -248,22 +262,187 @@ class PlatformAdminServiceTest {
                 .thenReturn(Optional.of(platformAdmin));
         when(adminRepository.save(any(PlatformAdmin.class)))
                 .thenReturn(platformAdmin);
+        doNothing().when(emailService).sendAdminWelcomeMail(
+                anyString(), anyString(), anyString(), anyString(), any());
 
         platformAdminService.activateAdmin(adminId);
 
         assertEquals(AdminStatus.ACTIVE, platformAdmin.getAdminStatus());
         verify(adminRepository).findById(adminId);
         verify(adminRepository).save(platformAdmin);
+        verify(emailService).sendAdminWelcomeMail(
+                anyString(), anyString(), eq("ACTIVE"), anyString(), any());
     }
 
     @Test
     void activateAdmin_NotFound() {
-        UUID adminId = UUID.randomUUID();
         when(adminRepository.findById(any(UUID.class))).thenReturn(Optional.empty());
 
         assertThrows(UsernameNotFoundException.class,
-                () -> platformAdminService.activateAdmin(adminId));
-        verify(adminRepository).findById(adminId);
+                () -> platformAdminService.activateAdmin(UUID.randomUUID()));
+        verify(adminRepository, never()).save(any(PlatformAdmin.class));
+    }
+
+    // ─── VERIFY EMAIL ─────────────────────────────────────────────────────────
+
+    @Test
+    void verifyAdminEmail_Success() {
+        platformAdmin.setAdminStatus(AdminStatus.EMAIL_PENDING);
+
+        AdminEmailVerificationToken verificationToken =
+                new AdminEmailVerificationToken();
+        verificationToken.setAdmin(platformAdmin);
+        verificationToken.setToken("valid-token");
+        verificationToken.setExpiresAt(LocalDateTime.now().plusHours(24));
+        verificationToken.setUsed(false);
+
+        PlatformAdmin rootAdmin = new PlatformAdmin();
+        rootAdmin.setEmail("root@drivehub.cm");
+        rootAdmin.setName("ROOT");
+
+        when(adminEmailTokenRepository.findByToken("valid-token"))
+                .thenReturn(Optional.of(verificationToken));
+        when(adminRepository.save(any(PlatformAdmin.class)))
+                .thenReturn(platformAdmin);
+        when(adminRepository.findByRole(AdminRole.ROOT))
+                .thenReturn(List.of(rootAdmin));
+        doNothing().when(emailService).sendAdminWelcomeMail(
+                anyString(), anyString(), anyString(), anyString(), any());
+        doNothing().when(emailService).sendNewAdminRegistrationNotification(
+                anyString(), anyString(), anyString(), anyString(),
+                anyString(), anyString(), anyString(), anyString(), any(UUID.class));
+
+        platformAdminService.verifyAdminEmail("valid-token");
+
+        assertEquals(AdminStatus.PENDING, platformAdmin.getAdminStatus());
+        verify(adminRepository).save(platformAdmin);
+        verify(emailService).sendAdminWelcomeMail(
+                anyString(), anyString(), eq("PENDING"), anyString(), any());
+        verify(emailService).sendNewAdminRegistrationNotification(
+                anyString(), anyString(), anyString(), anyString(),
+                anyString(), anyString(), anyString(), anyString(), any(UUID.class));
+        assertTrue(verificationToken.isUsed());
+    }
+
+    @Test
+    void verifyAdminEmail_InvalidToken() {
+        when(adminEmailTokenRepository.findByToken(anyString()))
+                .thenReturn(Optional.empty());
+
+        assertThrows(IllegalArgumentException.class,
+                () -> platformAdminService.verifyAdminEmail("bad-token"));
+    }
+
+    @Test
+    void verifyAdminEmail_ExpiredToken() {
+        AdminEmailVerificationToken expiredToken = new AdminEmailVerificationToken();
+        expiredToken.setAdmin(platformAdmin);
+        expiredToken.setToken("expired-token");
+        expiredToken.setExpiresAt(LocalDateTime.now().minusHours(1));
+        expiredToken.setUsed(false);
+
+        when(adminEmailTokenRepository.findByToken("expired-token"))
+                .thenReturn(Optional.of(expiredToken));
+
+        assertThrows(IllegalArgumentException.class,
+                () -> platformAdminService.verifyAdminEmail("expired-token"));
+        verify(adminRepository, never()).save(any(PlatformAdmin.class));
+    }
+
+    @Test
+    void verifyAdminEmail_AlreadyUsedToken() {
+        AdminEmailVerificationToken usedToken = new AdminEmailVerificationToken();
+        usedToken.setAdmin(platformAdmin);
+        usedToken.setToken("used-token");
+        usedToken.setExpiresAt(LocalDateTime.now().plusHours(24));
+        usedToken.setUsed(true);
+
+        when(adminEmailTokenRepository.findByToken("used-token"))
+                .thenReturn(Optional.of(usedToken));
+
+        assertThrows(IllegalArgumentException.class,
+                () -> platformAdminService.verifyAdminEmail("used-token"));
+        verify(adminRepository, never()).save(any(PlatformAdmin.class));
+    }
+
+    // ─── FORGOT PASSWORD ──────────────────────────────────────────────────────
+
+    @Test
+    void adminForgotPassword_SendsEmail_WhenAdminExists() {
+        when(adminRepository.findByEmail("admin@platform.com"))
+                .thenReturn(Optional.of(platformAdmin));
+        when(adminPasswordResetRepository.save(any()))
+                .thenReturn(new AdminPasswordResetToken());
+        doNothing().when(emailService).sendPasswordResetEmail(
+                anyString(), anyString(), anyString());
+
+        platformAdminService.adminForgotPassword(
+                new ForgotPasswordRequest("admin@platform.com"));
+
+        verify(adminPasswordResetRepository).deleteAllByAdminId(platformAdmin.getId());
+        verify(adminPasswordResetRepository).save(any(AdminPasswordResetToken.class));
+        verify(emailService).sendPasswordResetEmail(
+                anyString(), anyString(), anyString());
+    }
+
+    @Test
+    void adminForgotPassword_DoesNothing_WhenAdminNotFound() {
+        when(adminRepository.findByEmail(anyString())).thenReturn(Optional.empty());
+
+        platformAdminService.adminForgotPassword(
+                new ForgotPasswordRequest("unknown@test.cm"));
+
+        verifyNoInteractions(adminPasswordResetRepository, emailService);
+    }
+
+    // ─── RESET PASSWORD ───────────────────────────────────────────────────────
+
+    @Test
+    void adminResetPassword_Success() {
+        AdminPasswordResetToken resetToken = new AdminPasswordResetToken();
+        resetToken.setAdmin(platformAdmin);
+        resetToken.setToken("valid-reset-token");
+        resetToken.setExpiresAt(LocalDateTime.now().plusHours(1));
+        resetToken.setUsed(false);
+
+        when(adminPasswordResetRepository.findByToken("valid-reset-token"))
+                .thenReturn(Optional.of(resetToken));
+        when(passwordEncoder.encode(anyString())).thenReturn("newEncodedPassword");
+        when(adminRepository.save(any(PlatformAdmin.class))).thenReturn(platformAdmin);
+
+        platformAdminService.adminResetPassword(
+                new ResetPasswordRequest("valid-reset-token", "newPassword123"));
+
+        assertEquals("newEncodedPassword", platformAdmin.getPassword());
+        assertTrue(resetToken.isUsed());
+        verify(adminRepository).save(platformAdmin);
+    }
+
+    @Test
+    void adminResetPassword_InvalidToken() {
+        when(adminPasswordResetRepository.findByToken(anyString()))
+                .thenReturn(Optional.empty());
+
+        assertThrows(IllegalArgumentException.class,
+                () -> platformAdminService.adminResetPassword(
+                        new ResetPasswordRequest("bad-token", "newPass")));
+        verify(adminRepository, never()).save(any(PlatformAdmin.class));
+    }
+
+    @Test
+    void adminResetPassword_ExpiredToken() {
+        AdminPasswordResetToken expiredToken = new AdminPasswordResetToken();
+        expiredToken.setAdmin(platformAdmin);
+        expiredToken.setToken("expired-token");
+        expiredToken.setExpiresAt(LocalDateTime.now().minusHours(1));
+        expiredToken.setUsed(false);
+
+        when(adminPasswordResetRepository.findByToken("expired-token"))
+                .thenReturn(Optional.of(expiredToken));
+
+        assertThrows(IllegalArgumentException.class,
+                () -> platformAdminService.adminResetPassword(
+                        new ResetPasswordRequest("expired-token", "newPass")));
         verify(adminRepository, never()).save(any(PlatformAdmin.class));
     }
 
@@ -271,109 +450,91 @@ class PlatformAdminServiceTest {
 
     @Test
     void deactivateAdmin_Success() {
-        UUID adminId = platformAdmin.getId();
         when(adminRepository.findById(any(UUID.class)))
                 .thenReturn(Optional.of(platformAdmin));
         when(adminRepository.save(any(PlatformAdmin.class)))
                 .thenReturn(platformAdmin);
 
-        platformAdminService.deactivateAdmin(adminId);
+        platformAdminService.deactivateAdmin(platformAdmin.getId());
 
         assertEquals(AdminStatus.SUSPENDED, platformAdmin.getAdminStatus());
-        verify(adminRepository).findById(adminId);
         verify(adminRepository).save(platformAdmin);
     }
 
     @Test
     void deactivateAdmin_CannotDeactivateRoot() {
         platformAdmin.setRole(AdminRole.ROOT);
-        UUID adminId = platformAdmin.getId();
         when(adminRepository.findById(any(UUID.class)))
                 .thenReturn(Optional.of(platformAdmin));
 
         assertThrows(AccessDeniedException.class,
-                () -> platformAdminService.deactivateAdmin(adminId));
-        verify(adminRepository).findById(adminId);
+                () -> platformAdminService.deactivateAdmin(platformAdmin.getId()));
         verify(adminRepository, never()).save(any(PlatformAdmin.class));
     }
 
     @Test
     void deactivateAdmin_NotFound() {
-        UUID adminId = UUID.randomUUID();
         when(adminRepository.findById(any(UUID.class))).thenReturn(Optional.empty());
 
         assertThrows(IllegalArgumentException.class,
-                () -> platformAdminService.deactivateAdmin(adminId));
-        verify(adminRepository).findById(adminId);
-        verify(adminRepository, never()).save(any(PlatformAdmin.class));
+                () -> platformAdminService.deactivateAdmin(UUID.randomUUID()));
     }
 
     // ─── DELETE ADMIN ─────────────────────────────────────────────────────────
 
     @Test
     void deleteAdmin_Success() {
-        UUID adminId = platformAdmin.getId();
         when(adminRepository.findById(any(UUID.class)))
                 .thenReturn(Optional.of(platformAdmin));
         doNothing().when(adminRepository).delete(any(PlatformAdmin.class));
 
-        platformAdminService.deleteAdmin(adminId);
+        platformAdminService.deleteAdmin(platformAdmin.getId());
 
-        verify(adminRepository).findById(adminId);
         verify(adminRepository).delete(platformAdmin);
     }
 
     @Test
     void deleteAdmin_CannotDeleteRoot() {
         platformAdmin.setRole(AdminRole.ROOT);
-        UUID adminId = platformAdmin.getId();
         when(adminRepository.findById(any(UUID.class)))
                 .thenReturn(Optional.of(platformAdmin));
 
         assertThrows(AccessDeniedException.class,
-                () -> platformAdminService.deleteAdmin(adminId));
-        verify(adminRepository).findById(adminId);
+                () -> platformAdminService.deleteAdmin(platformAdmin.getId()));
         verify(adminRepository, never()).delete(any(PlatformAdmin.class));
     }
 
     @Test
     void deleteAdmin_NotFound() {
-        UUID adminId = UUID.randomUUID();
         when(adminRepository.findById(any(UUID.class))).thenReturn(Optional.empty());
 
         assertThrows(IllegalArgumentException.class,
-                () -> platformAdminService.deleteAdmin(adminId));
-        verify(adminRepository).findById(adminId);
-        verify(adminRepository, never()).delete(any(PlatformAdmin.class));
+                () -> platformAdminService.deleteAdmin(UUID.randomUUID()));
     }
 
     // ─── GET ADMIN BY ID ──────────────────────────────────────────────────────
 
     @Test
     void getAdminById_Success() {
-        UUID adminId = platformAdmin.getId();
         when(adminRepository.findById(any(UUID.class)))
                 .thenReturn(Optional.of(platformAdmin));
         when(adminMapper.toResponse(any(PlatformAdmin.class)))
                 .thenReturn(platformAdminResponse);
 
-        PlatformAdminResponse result = platformAdminService.getAdminById(adminId);
+        PlatformAdminResponse result =
+                platformAdminService.getAdminById(platformAdmin.getId());
 
         assertNotNull(result);
         assertEquals(platformAdmin.getName(), result.name());
         assertEquals(platformAdmin.getEmail(), result.email());
-        verify(adminRepository).findById(adminId);
-        verify(adminMapper).toResponse(platformAdmin);
     }
 
     @Test
     void getAdminById_NotFound() {
-        UUID adminId = UUID.randomUUID();
         when(adminRepository.findById(any(UUID.class))).thenReturn(Optional.empty());
 
         assertThrows(IllegalArgumentException.class,
-                () -> platformAdminService.getAdminById(adminId));
-        verify(adminRepository).findById(adminId);
+                () -> platformAdminService.getAdminById(UUID.randomUUID()));
     }
 
     // ─── STATS ────────────────────────────────────────────────────────────────
@@ -386,15 +547,11 @@ class PlatformAdminServiceTest {
         when(adminRepository.countByAdminStatus(AdminStatus.SUSPENDED)).thenReturn(1L);
         when(adminRepository.countByAdminStatus(AdminStatus.DISABLED)).thenReturn(0L);
 
-        var stats = platformAdminService.getAdminStats();
+        AdminStatsResponse stats = platformAdminService.getAdminStats();
 
-        assertNotNull(stats);
         assertEquals(10L, stats.totalAdmins());
         assertEquals(2L, stats.pendingAdmins());
         assertEquals(7L, stats.activeAdmins());
         assertEquals(1L, stats.inactiveAdmins());
-        verify(adminRepository).count();
-        verify(adminRepository).countByAdminStatus(AdminStatus.PENDING);
-        verify(adminRepository).countByAdminStatus(AdminStatus.ACTIVE);
     }
 }
